--- a/stylizing/landing_page.html
+++ b/stylizing/landing_page.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>42's Skill Portfolio</title>
   <link rel="icon" type="image/png" href="images/logo.png">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="landing_page.css">
 </head>
 <body class="main_grid">
     <header>
