updated the identity part

--- a/style-testing/portfolio.html
+++ b/style-testing/portfolio.html
@@ -15,10 +15,14 @@
             <img src="images/pfp.png" alt="Profile Picture" id="pfp"> <!-- profile picture -->
         </div>
         <div class="name flex">
-            <h1>João Paulo Rodrigues Pereira <br><span>joao-per</span></h1>
+            <h1>João Paulo Rodrigues Pereira</h1>
+            <p>joao-per</p>
         </div>
     </div>
     <div class="contact flex">
+        <div class="cross flex">
+            <img src="images/cross.png" alt="cross">
+        </div>
         <div class="contact_card">+351 963 019 007</div> <!-- phone nbr -->
         <div class="contact_card">test.me@gmail.com</div> <!-- e-mail -->
     </div>
@@ -133,10 +137,9 @@
 
         </div>
                                                         
-
     </div>
     <footer>
-        <p>School Website</p>
+        <p>https://www.42lisboa.com/</p>
     </footer>
     </body>
 </html>
